[package]
name = "kind2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI arguments parser
clap = { version = "3.1.3", features = ["derive"] }
# The mighty functional runtime
# hvm = "0.1.10"
hvm = { path = "../../HVM" }

stacker = "0.1"
