[package]
name = "kind2"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "The next version of the Kind proofgramming language."
homepage = "https://github.com/Kindelia/Kind2"
documentation = "https://github.com/Kindelia/Kind2"
repository = "https://github.com/Kindelia/Kind2"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI arguments parser
clap = { version = "3.1.3", features = ["derive"] }
# The mighty functional runtime
hvm = "0.1.20"
# hvm = { path = "../../HVM" }

stacker = "0.1"
